added screenshots to project templates

--- a/static/projects/chat-app.html
+++ b/static/projects/chat-app.html
@@ -50,8 +50,8 @@
     <p>Anyone could join the chat using the client.py file given, the ip and the port number</p>
     <h2>Screenshots</h2>
     <p>
-        <img src="/images/chat-preview.png" alt="chat-preview">
-        <img src="/images/terminal-server-preview.JPG" alt="terminal-server-preview">
+        <img src="../images/screenshots/chat-preview.PNG" alt="chat-preview">
+        <img src="../images/screenshots/chat-server-preview.JPG" alt="chat-server-preview">
     </p>
     <h2>Documentation</h2>
     <ul>
