--- a/static/projects/gui-calculator.html
+++ b/static/projects/gui-calculator.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUI Calculator | Projects | Sparsh Chaurasia</title>
+    <title>GUI Calculator</title>
 </head>
+
 <body>
     <h1 class="project__calculator--title">GUI Calculator App</h1>
     <br>
     <p>Simple GUI calculator made with Pyhton tkinter module</p>
     <br>
     <h2>Running</h2>
-    <h4>Grab the cpde from here</h4>
+    <h4>Grab the code from here</h4>
     <p><a href="https://github.com/SparshChaurasia/GuiCalculator" target="_blank">Click here</a></p>
     <br>
     <h4>Make sure to get python 3.9 or above</h4>
@@ -22,9 +24,9 @@
     <br>
     <h2>Preview</h2>
     <p>
-        {% load static %}
-        <img src={% static 'images/screenshots/Capture-calc.PNG' %} alt="img not found">
-        <img src={% static 'images/screenshots/calculator2.PNG' %} alt="img not found">
+        <img src="../images/screenshots/calculator-preview.PNG" img not found">
+        <img src="../images/screenshots/calculator-preview-history.PNG" img not found">
     </p>
 </body>
+
 </html>
